[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Micfong <micfong2@outlook.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
thiserror = "1.0.64"
egui_dock = { version = "0.14", git = "https://github.com/micfong-z/egui_dock", branch = "compact_tab_bar" }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
